--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav class="navigation">
     <div class="wrapper-flex">
         <div class="logo-wrapper">
-            <a href="index.html" class="logo text--capitalize">tne</a>
+            <a href="index.html" class="logo text--capitalize">TNE</a>
         </div>
         <ul class="navigation__list">
             <li>
@@ -32,7 +32,6 @@
             </li>
         </ul>
     </div>
-
 </nav>
 
 <div class="hero">
@@ -40,7 +39,6 @@
         <div class="heading-wrapper">
             <h1 id="hero-heading-1" class="hero__heading">true north</h1>
         </div>
-        <span class="hero-heading-underline"></span>
         <div class="heading-wrapper">
             <h1 id="hero-heading-2" class="hero__heading">experience</h1>
         </div>
@@ -48,6 +46,9 @@
     </div>
 </div>
 
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium dolorem at non, ullam aliquid velit? Praesentium cumque id ullam magnam porro facilis doloribus veniam commodi quae? Autem error quia sint.</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium dolorem at non, ullam aliquid velit? Praesentium cumque id ullam magnam porro facilis doloribus veniam commodi quae? Autem error quia sint.</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium dolorem at non, ullam aliquid velit? Praesentium cumque id ullam magnam porro facilis doloribus veniam commodi quae? Autem error quia sint.</p>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.js"></script>
