relpaced multiple h1s with single h1

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 
 <div class="hero">
     <div class="hero__content">
+        <h1 class="heading-wrapper">
+            <div id="hero-heading-1" class="hero__heading">true north</div>
+            <div id="hero-heading-2" class="hero__heading">experience</div>
+        </h1>
         <div class="heading-wrapper">
-            <h1 id="hero-heading-1" class="hero__heading">true north</h1>
-        </div>
-        <div class="heading-wrapper">
-            <h1 id="hero-heading-2" class="hero__heading">experience</h1>
+            
         </div>
 
     </div>
